parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     tipo -> ENTERO
Rule 2     tipo -> FLOTANTE
Rule 3     cte -> CTE_ENT
Rule 4     cte -> CTE_FLOT
Rule 5     retorno -> RETURN expresion PUNTO_Y_COMA
Rule 6     retorno -> RETURN PUNTO_Y_COMA
Rule 7     asigna -> ID OP_ASIG expresion PUNTO_Y_COMA
Rule 8     estatuto -> asigna
Rule 9     estatuto -> condicion
Rule 10    estatuto -> ciclo
Rule 11    estatuto -> llamada PUNTO_Y_COMA
Rule 12    estatuto -> imprime
Rule 13    estatuto -> retorno
Rule 14    estatuto -> CORA_ABRE list_estatuto CORA_CIERRA
Rule 15    list_estatuto -> empty
Rule 16    list_estatuto -> estatuto list_estatuto
Rule 17    cuerpo -> LLAVE_ABRE cuerpo_estat LLAVE_CIERRA
Rule 18    cuerpo_estat -> empty
Rule 19    cuerpo_estat -> estatuto cuerpo_estat
Rule 20    expresion -> exp expresion_exp
Rule 21    expresion_exp -> empty
Rule 22    expresion_exp -> OP_MAYOR exp
Rule 23    expresion_exp -> OP_MENOR exp
Rule 24    expresion_exp -> OP_MAYORIGUAL exp
Rule 25    expresion_exp -> OP_MENORIGUAL exp
Rule 26    expresion_exp -> OP_DIF exp
Rule 27    expresion_exp -> OP_IGUAL exp
Rule 28    ciclo -> MIENTRAS ciclo_marca PAR_ABRE expresion PAR_CIERRA HAZ cuerpo PUNTO_Y_COMA
Rule 29    ciclo_marca -> <empty>
Rule 30    condicion -> SI PAR_ABRE expresion PAR_CIERRA cuerpo condicion_cuerpo PUNTO_Y_COMA
Rule 31    condicion_cuerpo -> empty
Rule 32    condicion_cuerpo -> SINO cuerpo
Rule 33    imprime -> ESCRIBE PAR_ABRE imprime_exp PAR_CIERRA PUNTO_Y_COMA
Rule 34    imprime_exp -> expresion imprime_exp_p
Rule 35    imprime_exp -> LETRERO imprime_exp_p
Rule 36    imprime_exp_p -> empty
Rule 37    imprime_exp_p -> COMA imprime_exp
Rule 38    llamada -> ID PAR_ABRE llamada_expresion PAR_CIERRA
Rule 39    llamada_expresion -> empty
Rule 40    llamada_expresion -> expresion llamada_ex
Rule 41    llamada_ex -> empty
Rule 42    llamada_ex -> COMA expresion llamada_ex
Rule 43    factor -> PAR_ABRE expresion PAR_CIERRA
Rule 44    factor -> factor_sr factor_cte
Rule 45    factor_sr -> empty
Rule 46    factor_sr -> factor_rs
Rule 47    factor_rs -> OP_SUMA
Rule 48    factor_rs -> OP_RESTA
Rule 49    factor_cte -> ID
Rule 50    factor_cte -> cte
Rule 51    factor_cte -> llamada
Rule 52    vars -> VARS ID vars_todo
Rule 53    vars_todo -> vars_coma DOS_PUNTOS tipo PUNTO_Y_COMA vars_final
Rule 54    vars_coma -> empty
Rule 55    vars_coma -> COMA ID vars_coma
Rule 56    vars_final -> empty
Rule 57    vars_final -> vars_todo
Rule 58    func_header -> funcs_nt ID PAR_ABRE func_tipo PAR_CIERRA
Rule 59    funcs -> func_header LLAVE_ABRE func_vars cuerpo LLAVE_CIERRA PUNTO_Y_COMA
Rule 60    funcs_nt -> NULA
Rule 61    funcs_nt -> tipo
Rule 62    func_tipo -> empty
Rule 63    func_tipo -> ID DOS_PUNTOS tipo funcs_coma
Rule 64    funcs_coma -> empty
Rule 65    funcs_coma -> COMA ID DOS_PUNTOS tipo funcs_coma
Rule 66    func_vars -> empty
Rule 67    func_vars -> vars
Rule 68    exp -> termino exp_termino
Rule 69    exp_termino -> empty
Rule 70    exp_termino -> OP_SUMA exp
Rule 71    exp_termino -> OP_RESTA exp
Rule 72    termino -> factor termino_factor
Rule 73    termino_factor -> empty
Rule 74    termino_factor -> OP_MULT termino
Rule 75    termino_factor -> OP_DIV termino
Rule 76    programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main cuerpo FIN
Rule 77    program_entry -> <empty>
Rule 78    program_main -> <empty>
Rule 79    pro_vars -> empty
Rule 80    pro_vars -> vars
Rule 81    pro_funcs -> empty
Rule 82    pro_funcs -> pro_funcs_list
Rule 83    pro_funcs_list -> funcs
Rule 84    pro_funcs_list -> pro_funcs_list funcs
Rule 85    empty -> <empty>

Terminals, with rules where they appear

COMA                 : 37 42 55 65
CORA_ABRE            : 14
CORA_CIERRA          : 14
CTE_ENT              : 3
CTE_FLOT             : 4
DOS_PUNTOS           : 53 63 65
ENTERO               : 1
ESCRIBE              : 33
FIN                  : 76
FLOTANTE             : 2
HAZ                  : 28
ID                   : 7 38 49 52 55 58 63 65 76
INICIO               : 76
LETRERO              : 35
LLAVE_ABRE           : 17 59
LLAVE_CIERRA         : 17 59
MIENTRAS             : 28
NULA                 : 60
OP_ASIG              : 7
OP_DIF               : 26
OP_DIV               : 75
OP_IGUAL             : 27
OP_MAYOR             : 22
OP_MAYORIGUAL        : 24
OP_MENOR             : 23
OP_MENORIGUAL        : 25
OP_MULT              : 74
OP_RESTA             : 48 71
OP_SUMA              : 47 70
PAR_ABRE             : 28 30 33 38 43 58
PAR_CIERRA           : 28 30 33 38 43 58
PROGRAMA             : 76
PUNTO_Y_COMA         : 5 6 7 11 28 30 33 53 59 76
RETURN               : 5 6
SI                   : 30
SINO                 : 32
VARS                 : 52
error                : 

Nonterminals, with rules where they appear

asigna               : 8
ciclo                : 10
ciclo_marca          : 28
condicion            : 9
condicion_cuerpo     : 30
cte                  : 50
cuerpo               : 28 30 32 59 76
cuerpo_estat         : 17 19
empty                : 15 18 21 31 36 39 41 45 54 56 62 64 66 69 73 79 81
estatuto             : 16 19
exp                  : 20 22 23 24 25 26 27 70 71
exp_termino          : 68
expresion            : 5 7 28 30 34 40 42 43
expresion_exp        : 20
factor               : 72
factor_cte           : 44
factor_rs            : 46
factor_sr            : 44
func_header          : 59
func_tipo            : 58
func_vars            : 59
funcs                : 83 84
funcs_coma           : 63 65
funcs_nt             : 58
imprime              : 12
imprime_exp          : 33 37
imprime_exp_p        : 34 35
list_estatuto        : 14 16
llamada              : 11 51
llamada_ex           : 40 42
llamada_expresion    : 38
pro_funcs            : 76
pro_funcs_list       : 82 84
pro_vars             : 76
program_entry        : 76
program_main         : 76
programa             : 0
retorno              : 13
termino              : 68 74 75
termino_factor       : 72
tipo                 : 53 61 63 65
vars                 : 67 80
vars_coma            : 53 55
vars_final           : 53
vars_todo            : 52 57

Parsing method: LALR

state 0

    (0) S' -> . programa
    (76) programa -> . PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main cuerpo FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (76) programa -> PROGRAMA . ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main cuerpo FIN

    ID              shift and go to state 3


state 3

    (76) programa -> PROGRAMA ID . PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main cuerpo FIN

    PUNTO_Y_COMA    shift and go to state 4


state 4

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA . program_entry pro_vars pro_funcs INICIO program_main cuerpo FIN
    (77) program_entry -> .

    VARS            reduce using rule 77 (program_entry -> .)
    NULA            reduce using rule 77 (program_entry -> .)
    ENTERO          reduce using rule 77 (program_entry -> .)
    FLOTANTE        reduce using rule 77 (program_entry -> .)
    INICIO          reduce using rule 77 (program_entry -> .)

    program_entry                  shift and go to state 5

state 5

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA program_entry . pro_vars pro_funcs INICIO program_main cuerpo FIN
    (79) pro_vars -> . empty
    (80) pro_vars -> . vars
    (85) empty -> .
    (52) vars -> . VARS ID vars_todo

    NULA            reduce using rule 85 (empty -> .)
    ENTERO          reduce using rule 85 (empty -> .)
    FLOTANTE        reduce using rule 85 (empty -> .)
    INICIO          reduce using rule 85 (empty -> .)
    VARS            shift and go to state 9

    pro_vars                       shift and go to state 6
    empty                          shift and go to state 7
    vars                           shift and go to state 8

state 6

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars . pro_funcs INICIO program_main cuerpo FIN
    (81) pro_funcs -> . empty
    (82) pro_funcs -> . pro_funcs_list
    (85) empty -> .
    (83) pro_funcs_list -> . funcs
    (84) pro_funcs_list -> . pro_funcs_list funcs
    (59) funcs -> . func_header LLAVE_ABRE func_vars cuerpo LLAVE_CIERRA PUNTO_Y_COMA
    (58) func_header -> . funcs_nt ID PAR_ABRE func_tipo PAR_CIERRA
    (60) funcs_nt -> . NULA
    (61) funcs_nt -> . tipo
    (1) tipo -> . ENTERO
    (2) tipo -> . FLOTANTE

    INICIO          reduce using rule 85 (empty -> .)
    NULA            shift and go to state 16
    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    pro_funcs                      shift and go to state 10
    empty                          shift and go to state 11
    pro_funcs_list                 shift and go to state 12
    funcs                          shift and go to state 13
    func_header                    shift and go to state 14
    funcs_nt                       shift and go to state 15
    tipo                           shift and go to state 17

state 7

    (79) pro_vars -> empty .

    NULA            reduce using rule 79 (pro_vars -> empty .)
    ENTERO          reduce using rule 79 (pro_vars -> empty .)
    FLOTANTE        reduce using rule 79 (pro_vars -> empty .)
    INICIO          reduce using rule 79 (pro_vars -> empty .)


state 8

    (80) pro_vars -> vars .

    NULA            reduce using rule 80 (pro_vars -> vars .)
    ENTERO          reduce using rule 80 (pro_vars -> vars .)
    FLOTANTE        reduce using rule 80 (pro_vars -> vars .)
    INICIO          reduce using rule 80 (pro_vars -> vars .)


state 9

    (52) vars -> VARS . ID vars_todo

    ID              shift and go to state 20


state 10

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs . INICIO program_main cuerpo FIN

    INICIO          shift and go to state 21


state 11

    (81) pro_funcs -> empty .

    INICIO          reduce using rule 81 (pro_funcs -> empty .)


state 12

    (82) pro_funcs -> pro_funcs_list .
    (84) pro_funcs_list -> pro_funcs_list . funcs
    (59) funcs -> . func_header LLAVE_ABRE func_vars cuerpo LLAVE_CIERRA PUNTO_Y_COMA
    (58) func_header -> . funcs_nt ID PAR_ABRE func_tipo PAR_CIERRA
    (60) funcs_nt -> . NULA
    (61) funcs_nt -> . tipo
    (1) tipo -> . ENTERO
    (2) tipo -> . FLOTANTE

    INICIO          reduce using rule 82 (pro_funcs -> pro_funcs_list .)
    NULA            shift and go to state 16
    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    funcs                          shift and go to state 22
    func_header                    shift and go to state 14
    funcs_nt                       shift and go to state 15
    tipo                           shift and go to state 17

state 13

    (83) pro_funcs_list -> funcs .

    NULA            reduce using rule 83 (pro_funcs_list -> funcs .)
    ENTERO          reduce using rule 83 (pro_funcs_list -> funcs .)
    FLOTANTE        reduce using rule 83 (pro_funcs_list -> funcs .)
    INICIO          reduce using rule 83 (pro_funcs_list -> funcs .)


state 14

    (59) funcs -> func_header . LLAVE_ABRE func_vars cuerpo LLAVE_CIERRA PUNTO_Y_COMA

    LLAVE_ABRE      shift and go to state 23


state 15

    (58) func_header -> funcs_nt . ID PAR_ABRE func_tipo PAR_CIERRA

    ID              shift and go to state 24


state 16

    (60) funcs_nt -> NULA .

    ID              reduce using rule 60 (funcs_nt -> NULA .)


state 17

    (61) funcs_nt -> tipo .

    ID              reduce using rule 61 (funcs_nt -> tipo .)


state 18

    (1) tipo -> ENTERO .

    ID              reduce using rule 1 (tipo -> ENTERO .)
    PUNTO_Y_COMA    reduce using rule 1 (tipo -> ENTERO .)
    COMA            reduce using rule 1 (tipo -> ENTERO .)
    PAR_CIERRA      reduce using rule 1 (tipo -> ENTERO .)


state 19

    (2) tipo -> FLOTANTE .

    ID              reduce using rule 2 (tipo -> FLOTANTE .)
    PUNTO_Y_COMA    reduce using rule 2 (tipo -> FLOTANTE .)
    COMA            reduce using rule 2 (tipo -> FLOTANTE .)
    PAR_CIERRA      reduce using rule 2 (tipo -> FLOTANTE .)


state 20

    (52) vars -> VARS ID . vars_todo
    (53) vars_todo -> . vars_coma DOS_PUNTOS tipo PUNTO_Y_COMA vars_final
    (54) vars_coma -> . empty
    (55) vars_coma -> . COMA ID vars_coma
    (85) empty -> .

    COMA            shift and go to state 28
    DOS_PUNTOS      reduce using rule 85 (empty -> .)

    vars_todo                      shift and go to state 25
    vars_coma                      shift and go to state 26
    empty                          shift and go to state 27

state 21

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO . program_main cuerpo FIN
    (78) program_main -> .

    LLAVE_ABRE      reduce using rule 78 (program_main -> .)

    program_main                   shift and go to state 29

state 22

    (84) pro_funcs_list -> pro_funcs_list funcs .

    NULA            reduce using rule 84 (pro_funcs_list -> pro_funcs_list funcs .)
    ENTERO          reduce using rule 84 (pro_funcs_list -> pro_funcs_list funcs .)
    FLOTANTE        reduce using rule 84 (pro_funcs_list -> pro_funcs_list funcs .)
    INICIO          reduce using rule 84 (pro_funcs_list -> pro_funcs_list funcs .)


state 23

    (59) funcs -> func_header LLAVE_ABRE . func_vars cuerpo LLAVE_CIERRA PUNTO_Y_COMA
    (66) func_vars -> . empty
    (67) func_vars -> . vars
    (85) empty -> .
    (52) vars -> . VARS ID vars_todo

    LLAVE_ABRE      reduce using rule 85 (empty -> .)
    VARS            shift and go to state 9

    func_vars                      shift and go to state 30
    empty                          shift and go to state 31
    vars                           shift and go to state 32

state 24

    (58) func_header -> funcs_nt ID . PAR_ABRE func_tipo PAR_CIERRA

    PAR_ABRE        shift and go to state 33


state 25

    (52) vars -> VARS ID vars_todo .

    NULA            reduce using rule 52 (vars -> VARS ID vars_todo .)
    ENTERO          reduce using rule 52 (vars -> VARS ID vars_todo .)
    FLOTANTE        reduce using rule 52 (vars -> VARS ID vars_todo .)
    INICIO          reduce using rule 52 (vars -> VARS ID vars_todo .)
    LLAVE_ABRE      reduce using rule 52 (vars -> VARS ID vars_todo .)


state 26

    (53) vars_todo -> vars_coma . DOS_PUNTOS tipo PUNTO_Y_COMA vars_final

    DOS_PUNTOS      shift and go to state 34


state 27

    (54) vars_coma -> empty .

    DOS_PUNTOS      reduce using rule 54 (vars_coma -> empty .)


state 28

    (55) vars_coma -> COMA . ID vars_coma

    ID              shift and go to state 35


state 29

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main . cuerpo FIN
    (17) cuerpo -> . LLAVE_ABRE cuerpo_estat LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 37

    cuerpo                         shift and go to state 36

state 30

    (59) funcs -> func_header LLAVE_ABRE func_vars . cuerpo LLAVE_CIERRA PUNTO_Y_COMA
    (17) cuerpo -> . LLAVE_ABRE cuerpo_estat LLAVE_CIERRA

    LLAVE_ABRE      shift and go to state 37

    cuerpo                         shift and go to state 38

state 31

    (66) func_vars -> empty .

    LLAVE_ABRE      reduce using rule 66 (func_vars -> empty .)


state 32

    (67) func_vars -> vars .

    LLAVE_ABRE      reduce using rule 67 (func_vars -> vars .)


state 33

    (58) func_header -> funcs_nt ID PAR_ABRE . func_tipo PAR_CIERRA
    (62) func_tipo -> . empty
    (63) func_tipo -> . ID DOS_PUNTOS tipo funcs_coma
    (85) empty -> .

    ID              shift and go to state 39
    PAR_CIERRA      reduce using rule 85 (empty -> .)

    func_tipo                      shift and go to state 40
    empty                          shift and go to state 41

state 34

    (53) vars_todo -> vars_coma DOS_PUNTOS . tipo PUNTO_Y_COMA vars_final
    (1) tipo -> . ENTERO
    (2) tipo -> . FLOTANTE

    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    tipo                           shift and go to state 42

state 35

    (55) vars_coma -> COMA ID . vars_coma
    (54) vars_coma -> . empty
    (55) vars_coma -> . COMA ID vars_coma
    (85) empty -> .

    COMA            shift and go to state 28
    DOS_PUNTOS      reduce using rule 85 (empty -> .)

    vars_coma                      shift and go to state 43
    empty                          shift and go to state 27

state 36

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main cuerpo . FIN

    FIN             shift and go to state 44


state 37

    (17) cuerpo -> LLAVE_ABRE . cuerpo_estat LLAVE_CIERRA
    (18) cuerpo_estat -> . empty
    (19) cuerpo_estat -> . estatuto cuerpo_estat
    (85) empty -> .
    (8) estatuto -> . asigna
    (9) estatuto -> . condicion
    (10) estatuto -> . ciclo
    (11) estatuto -> . llamada PUNTO_Y_COMA
    (12) estatuto -> . imprime
    (13) estatuto -> . retorno
    (14) estatuto -> . CORA_ABRE list_estatuto CORA_CIERRA
    (7) asigna -> . ID OP_ASIG expresion PUNTO_Y_COMA
    (30) condicion -> . SI PAR_ABRE expresion PAR_CIERRA cuerpo condicion_cuerpo PUNTO_Y_COMA
    (28) ciclo -> . MIENTRAS ciclo_marca PAR_ABRE expresion PAR_CIERRA HAZ cuerpo PUNTO_Y_COMA
    (38) llamada -> . ID PAR_ABRE llamada_expresion PAR_CIERRA
    (33) imprime -> . ESCRIBE PAR_ABRE imprime_exp PAR_CIERRA PUNTO_Y_COMA
    (5) retorno -> . RETURN expresion PUNTO_Y_COMA
    (6) retorno -> . RETURN PUNTO_Y_COMA

    LLAVE_CIERRA    reduce using rule 85 (empty -> .)
    CORA_ABRE       shift and go to state 54
    ID              shift and go to state 55
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    ESCRIBE         shift and go to state 58
    RETURN          shift and go to state 59

    cuerpo_estat                   shift and go to state 45
    empty                          shift and go to state 46
    estatuto                       shift and go to state 47
    asigna                         shift and go to state 48
    condicion                      shift and go to state 49
    ciclo                          shift and go to state 50
    llamada                        shift and go to state 51
    imprime                        shift and go to state 52
    retorno                        shift and go to state 53

state 38

    (59) funcs -> func_header LLAVE_ABRE func_vars cuerpo . LLAVE_CIERRA PUNTO_Y_COMA

    LLAVE_CIERRA    shift and go to state 60


state 39

    (63) func_tipo -> ID . DOS_PUNTOS tipo funcs_coma

    DOS_PUNTOS      shift and go to state 61


state 40

    (58) func_header -> funcs_nt ID PAR_ABRE func_tipo . PAR_CIERRA

    PAR_CIERRA      shift and go to state 62


state 41

    (62) func_tipo -> empty .

    PAR_CIERRA      reduce using rule 62 (func_tipo -> empty .)


state 42

    (53) vars_todo -> vars_coma DOS_PUNTOS tipo . PUNTO_Y_COMA vars_final

    PUNTO_Y_COMA    shift and go to state 63


state 43

    (55) vars_coma -> COMA ID vars_coma .

    DOS_PUNTOS      reduce using rule 55 (vars_coma -> COMA ID vars_coma .)


state 44

    (76) programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main cuerpo FIN .

    $end            reduce using rule 76 (programa -> PROGRAMA ID PUNTO_Y_COMA program_entry pro_vars pro_funcs INICIO program_main cuerpo FIN .)


state 45

    (17) cuerpo -> LLAVE_ABRE cuerpo_estat . LLAVE_CIERRA

    LLAVE_CIERRA    shift and go to state 64


state 46

    (18) cuerpo_estat -> empty .

    LLAVE_CIERRA    reduce using rule 18 (cuerpo_estat -> empty .)


state 47

    (19) cuerpo_estat -> estatuto . cuerpo_estat
    (18) cuerpo_estat -> . empty
    (19) cuerpo_estat -> . estatuto cuerpo_estat
    (85) empty -> .
    (8) estatuto -> . asigna
    (9) estatuto -> . condicion
    (10) estatuto -> . ciclo
    (11) estatuto -> . llamada PUNTO_Y_COMA
    (12) estatuto -> . imprime
    (13) estatuto -> . retorno
    (14) estatuto -> . CORA_ABRE list_estatuto CORA_CIERRA
    (7) asigna -> . ID OP_ASIG expresion PUNTO_Y_COMA
    (30) condicion -> . SI PAR_ABRE expresion PAR_CIERRA cuerpo condicion_cuerpo PUNTO_Y_COMA
    (28) ciclo -> . MIENTRAS ciclo_marca PAR_ABRE expresion PAR_CIERRA HAZ cuerpo PUNTO_Y_COMA
    (38) llamada -> . ID PAR_ABRE llamada_expresion PAR_CIERRA
    (33) imprime -> . ESCRIBE PAR_ABRE imprime_exp PAR_CIERRA PUNTO_Y_COMA
    (5) retorno -> . RETURN expresion PUNTO_Y_COMA
    (6) retorno -> . RETURN PUNTO_Y_COMA

    LLAVE_CIERRA    reduce using rule 85 (empty -> .)
    CORA_ABRE       shift and go to state 54
    ID              shift and go to state 55
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    ESCRIBE         shift and go to state 58
    RETURN          shift and go to state 59

    estatuto                       shift and go to state 47
    cuerpo_estat                   shift and go to state 65
    empty                          shift and go to state 46
    asigna                         shift and go to state 48
    condicion                      shift and go to state 49
    ciclo                          shift and go to state 50
    llamada                        shift and go to state 51
    imprime                        shift and go to state 52
    retorno                        shift and go to state 53

state 48

    (8) estatuto -> asigna .

    CORA_ABRE       reduce using rule 8 (estatuto -> asigna .)
    ID              reduce using rule 8 (estatuto -> asigna .)
    SI              reduce using rule 8 (estatuto -> asigna .)
    MIENTRAS        reduce using rule 8 (estatuto -> asigna .)
    ESCRIBE         reduce using rule 8 (estatuto -> asigna .)
    RETURN          reduce using rule 8 (estatuto -> asigna .)
    LLAVE_CIERRA    reduce using rule 8 (estatuto -> asigna .)
    CORA_CIERRA     reduce using rule 8 (estatuto -> asigna .)


state 49

    (9) estatuto -> condicion .

    CORA_ABRE       reduce using rule 9 (estatuto -> condicion .)
    ID              reduce using rule 9 (estatuto -> condicion .)
    SI              reduce using rule 9 (estatuto -> condicion .)
    MIENTRAS        reduce using rule 9 (estatuto -> condicion .)
    ESCRIBE         reduce using rule 9 (estatuto -> condicion .)
    RETURN          reduce using rule 9 (estatuto -> condicion .)
    LLAVE_CIERRA    reduce using rule 9 (estatuto -> condicion .)
    CORA_CIERRA     reduce using rule 9 (estatuto -> condicion .)


state 50

    (10) estatuto -> ciclo .

    CORA_ABRE       reduce using rule 10 (estatuto -> ciclo .)
    ID              reduce using rule 10 (estatuto -> ciclo .)
    SI              reduce using rule 10 (estatuto -> ciclo .)
    MIENTRAS        reduce using rule 10 (estatuto -> ciclo .)
    ESCRIBE         reduce using rule 10 (estatuto -> ciclo .)
    RETURN          reduce using rule 10 (estatuto -> ciclo .)
    LLAVE_CIERRA    reduce using rule 10 (estatuto -> ciclo .)
    CORA_CIERRA     reduce using rule 10 (estatuto -> ciclo .)


state 51

    (11) estatuto -> llamada . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 66


state 52

    (12) estatuto -> imprime .

    CORA_ABRE       reduce using rule 12 (estatuto -> imprime .)
    ID              reduce using rule 12 (estatuto -> imprime .)
    SI              reduce using rule 12 (estatuto -> imprime .)
    MIENTRAS        reduce using rule 12 (estatuto -> imprime .)
    ESCRIBE         reduce using rule 12 (estatuto -> imprime .)
    RETURN          reduce using rule 12 (estatuto -> imprime .)
    LLAVE_CIERRA    reduce using rule 12 (estatuto -> imprime .)
    CORA_CIERRA     reduce using rule 12 (estatuto -> imprime .)


state 53

    (13) estatuto -> retorno .

    CORA_ABRE       reduce using rule 13 (estatuto -> retorno .)
    ID              reduce using rule 13 (estatuto -> retorno .)
    SI              reduce using rule 13 (estatuto -> retorno .)
    MIENTRAS        reduce using rule 13 (estatuto -> retorno .)
    ESCRIBE         reduce using rule 13 (estatuto -> retorno .)
    RETURN          reduce using rule 13 (estatuto -> retorno .)
    LLAVE_CIERRA    reduce using rule 13 (estatuto -> retorno .)
    CORA_CIERRA     reduce using rule 13 (estatuto -> retorno .)


state 54

    (14) estatuto -> CORA_ABRE . list_estatuto CORA_CIERRA
    (15) list_estatuto -> . empty
    (16) list_estatuto -> . estatuto list_estatuto
    (85) empty -> .
    (8) estatuto -> . asigna
    (9) estatuto -> . condicion
    (10) estatuto -> . ciclo
    (11) estatuto -> . llamada PUNTO_Y_COMA
    (12) estatuto -> . imprime
    (13) estatuto -> . retorno
    (14) estatuto -> . CORA_ABRE list_estatuto CORA_CIERRA
    (7) asigna -> . ID OP_ASIG expresion PUNTO_Y_COMA
    (30) condicion -> . SI PAR_ABRE expresion PAR_CIERRA cuerpo condicion_cuerpo PUNTO_Y_COMA
    (28) ciclo -> . MIENTRAS ciclo_marca PAR_ABRE expresion PAR_CIERRA HAZ cuerpo PUNTO_Y_COMA
    (38) llamada -> . ID PAR_ABRE llamada_expresion PAR_CIERRA
    (33) imprime -> . ESCRIBE PAR_ABRE imprime_exp PAR_CIERRA PUNTO_Y_COMA
    (5) retorno -> . RETURN expresion PUNTO_Y_COMA
    (6) retorno -> . RETURN PUNTO_Y_COMA

    CORA_CIERRA     reduce using rule 85 (empty -> .)
    CORA_ABRE       shift and go to state 54
    ID              shift and go to state 55
    SI              shift and go to state 56
    MIENTRAS        shift and go to state 57
    ESCRIBE         shift and go to state 58
    RETURN          shift and go to state 59

    list_estatuto                  shift and go to state 67
    empty                          shift and go to state 68
    estatuto                       shift and go to state 69
    asigna                         shift and go to state 48
    condicion                      shift and go to state 49
    ciclo                          shift and go to state 50
    llamada                        shift and go to state 51
    imprime                        shift and go to state 52
    retorno                        shift and go to state 53

state 55

    (7) asigna -> ID . OP_ASIG expresion PUNTO_Y_COMA
    (38) llamada -> ID . PAR_ABRE llamada_expresion PAR_CIERRA

    OP_ASIG         shift and go to state 70
    PAR_ABRE        shift and go to state 71


state 56

    (30) condicion -> SI . PAR_ABRE expresion PAR_CIERRA cuerpo condicion_cuerpo PUNTO_Y_COMA

    PAR_ABRE        shift and go to state 72


state 57

    (28) ciclo -> MIENTRAS . ciclo_marca PAR_ABRE expresion PAR_CIERRA HAZ cuerpo PUNTO_Y_COMA
    (29) ciclo_marca -> .

    PAR_ABRE        reduce using rule 29 (ciclo_marca -> .)

    ciclo_marca                    shift and go to state 73

state 58

    (33) imprime -> ESCRIBE . PAR_ABRE imprime_exp PAR_CIERRA PUNTO_Y_COMA

    PAR_ABRE        shift and go to state 74


state 59

    (5) retorno -> RETURN . expresion PUNTO_Y_COMA
    (6) retorno -> RETURN . PUNTO_Y_COMA
    (20) expresion -> . exp expresion_exp
    (68) exp -> . termino exp_termino
    (72) termino -> . factor termino_factor
    (43) factor -> . PAR_ABRE expresion PAR_CIERRA
    (44) factor -> . factor_sr factor_cte
    (45) factor_sr -> . empty
    (46) factor_sr -> . factor_rs
    (85) empty -> .
    (47) factor_rs -> . OP_SUMA
    (48) factor_rs -> . OP_RESTA

    PUNTO_Y_COMA    shift and go to state 76
    PAR_ABRE        shift and go to state 80
    ID              reduce using rule 85 (empty -> .)
    CTE_ENT         reduce using rule 85 (empty -> .)
    CTE_FLOT        reduce using rule 85 (empty -> .)
    OP_SUMA         shift and go to state 84
    OP_RESTA        shift and go to state 85

    expresion                      shift and go to state 75
    exp                            shift and go to state 77
    termino                        shift and go to state 78
    factor                         shift and go to state 79
    factor_sr                      shift and go to state 81
    empty                          shift and go to state 82
    factor_rs                      shift and go to state 83

state 60

    (59) funcs -> func_header LLAVE_ABRE func_vars cuerpo LLAVE_CIERRA . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 86


state 61

    (63) func_tipo -> ID DOS_PUNTOS . tipo funcs_coma
    (1) tipo -> . ENTERO
    (2) tipo -> . FLOTANTE

    ENTERO          shift and go to state 18
    FLOTANTE        shift and go to state 19

    tipo                           shift and go to state 87

state 62

    (58) func_header -> funcs_nt ID PAR_ABRE func_tipo PAR_CIERRA .

    LLAVE_ABRE      reduce using rule 58 (func_header -> funcs_nt ID PAR_ABRE func_tipo PAR_CIERRA .)


state 63

    (53) vars_todo -> vars_coma DOS_PUNTOS tipo PUNTO_Y_COMA . vars_final
    (56) vars_final -> . empty
    (57) vars_final -> . vars_todo
    (85) empty -> .
    (53) vars_todo -> . vars_coma DOS_PUNTOS tipo PUNTO_Y_COMA vars_final
    (54) vars_coma -> . empty
    (55) vars_coma -> . COMA ID vars_coma

    NULA            reduce using rule 85 (empty -> .)
    ENTERO          reduce using rule 85 (empty -> .)
    FLOTANTE        reduce using rule 85 (empty -> .)
    INICIO          reduce using rule 85 (empty -> .)
    LLAVE_ABRE      reduce using rule 85 (empty -> .)
    DOS_PUNTOS      reduce using rule 85 (empty -> .)
    COMA            shift and go to state 28

    vars_coma                      shift and go to state 26
    vars_final                     shift and go to state 88
    empty                          shift and go to state 89
    vars_todo                      shift and go to state 90

state 64

    (17) cuerpo -> LLAVE_ABRE cuerpo_estat LLAVE_CIERRA .

    FIN             reduce using rule 17 (cuerpo -> LLAVE_ABRE cuerpo_estat LLAVE_CIERRA .)
    LLAVE_CIERRA    reduce using rule 17 (cuerpo -> LLAVE_ABRE cuerpo_estat LLAVE_CIERRA .)
    SINO            reduce using rule 17 (cuerpo -> LLAVE_ABRE cuerpo_estat LLAVE_CIERRA .)
    PUNTO_Y_COMA    reduce using rule 17 (cuerpo -> LLAVE_ABRE cuerpo_estat LLAVE_CIERRA .)


state 65

    (19) cuerpo_estat -> estatuto cuerpo_estat .

    LLAVE_CIERRA    reduce using rule 19 (cuerpo_estat -> estatuto cuerpo_estat .)


state 66

    (11) estatuto -> llamada PUNTO_Y_COMA .

    CORA_ABRE       reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)
    ID              reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)
    SI              reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)
    MIENTRAS        reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)
    ESCRIBE         reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)
    RETURN          reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)
    LLAVE_CIERRA    reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)
    CORA_CIERRA     reduce using rule 11 (estatuto -> llamada PUNTO_Y_COMA .)


state 67

    (14) estatuto -> CORA_ABRE list_estatuto . CORA_CIERRA

    CORA_CIERRA     shift and go to state 91

